--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -375,6 +375,7 @@
 .table {
   margin-bottom: 29px;
   border-collapse: collapse;
+  width: 260px;
   &__row {
     height: 41px;
     border-bottom: 1px solid $frameMenu;
@@ -384,7 +385,6 @@
     color: $darkGray;
     font-size: 15px;
     line-height: calc(20/15);
-    width: 260px;
   }
 }
 
@@ -619,10 +619,11 @@
   }
   .catalog-card {
     width: 1050px;
-    height: 795px;
+    height: 637px;
     margin: 0 auto;
+    padding: 0;
     &__item {
-      height: 795px;
+      height: 634px;
       flex-direction: column;
       margin-top: 70px;
     }
@@ -635,10 +636,13 @@
       left: 170px;
       margin: 0;
     }
+    &__descr{
+      padding-bottom: 46px;
+    }
     &__hot-sale {
       order: 1;
       align-self: flex-start;
-      margin: 65px 0 0 15px;
+      margin: 66px 0 0 47px;
     }
     &__detail {
       order: 2;
@@ -652,9 +656,16 @@
     &__to-buy {
       order: 2;
       align-self: flex-end;
-      flex-basis: 290px;
-      margin-right: 50px;
+      height: 130px;
+      margin-right: 57px;
     }
+    &__price{
+      font-size: 20px;
+      padding: 19px 0 34px 0;
+    }
+  }
+  .decoration {
+    margin: 65px 0 60px 0;
   }
 }
 
