--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -116,8 +116,8 @@ padding: 0;
 @media (min-width: 1024px) {
 
     .contacts{
-        width: 1050px;
-        height: 528px;
+        min-width: 1050px;
+        max-height: 524px;
         margin: 0 auto;
 
         &__inner{
@@ -126,16 +126,18 @@ padding: 0;
           flex-wrap: wrap;
           flex-direction: column;
           align-content: flex-end;
-          height: 528px;
+          height: 524px;
         }
         &__box{
             flex-wrap: wrap;
             width: 311px;
-            height: 220px;
+            height: 238px;
+            margin: 0;
             order: 2;
         }
         &__wrap{
             width: 310px;
+            padding: 30px 0 0 4px;
         }
         &__link{
             width: 230px;
@@ -147,12 +149,12 @@ padding: 0;
         &__map{
             order: 3;
             align-self: flex-end;
-            margin-top: 55px;
+            margin-top: 72px;
         }
         &__btn{
             order: 2;
-            margin: 0;
-            width: 290px;
+            margin: 22px 0 0 5px;
+            width: 230px;
         }
         &__title{
             @include titleDesk;
@@ -160,8 +162,8 @@ padding: 0;
             margin: 85px 80px 20px 0;
         }
         &__icon{
-            top: -280px;
-            left: -90px;
+            top: -265px;
+            left: -107px;
         }
     }
     #map{
