пиксель перфект главной страниции в процессе

--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -11,10 +11,11 @@
 
     &__title {
         @include titleXlMob;
-        width: 244px;
+        width: 220px;
         text-align: center;
         margin: 0 auto;
-        padding: 77px 0 140px 0;
+        // padding: 77px 0 140px 0;
+        padding: 71px 0 122px 0;
     }
 
     &__list {
@@ -25,7 +26,7 @@
     }
 
     &__item {
-        height: 103px;
+        height: 101px;
         border: 1px solid $greenLeft;
         background-color: $greenLeft;
         display: flex;
@@ -54,7 +55,8 @@
         font-weight: 700;
         display: inline-block;
         width: 100%;
-        padding: 24px 165px 28px 38px;
+        // padding: 24px 165px 28px 38px;
+        padding: 24px 165px 27px 28px;
 
 
         &--left::before {
@@ -64,8 +66,8 @@
             background-position: -226px -12px ;
             width: 41px;
             height: 62px;
-            top: 20px;
-            left: 79%;
+            top: 22px;
+            left: 76%;
             }
         
         &--right::before {
@@ -75,8 +77,8 @@
         background-position: -315px -12px ;
 	    width: 61px;
         height: 61px;
-        top: 20px;
-        left: 75%;
+        top: 19px;
+        left: 73%;
         }
 
     }
