--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -8,7 +8,7 @@
 
     &__inner{
         display: block;
-        margin: 53px 0 0 0;
+        margin: 10px 0 0 0;
         //margin:58px 0 0 0;
         width: 100%;
         height: 160px;
@@ -19,8 +19,7 @@
     }
 
     &__link {
-        margin: 18px;
-        //margin:10px;
+        margin: 23px 20px 7px 14px;
     }
 
     &__social {
@@ -166,6 +165,9 @@ margin-top: 21px;
     .footer {
         width: 100%;
         min-width: 1200px;
+        &__inner{
+            margin-top: 53px;
+        }
         &__logo{
           margin-left: 38px;
         }
