--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -1,10 +1,12 @@
 .contacts {
-padding: 32px;
+padding: 32px 0;
     
 
     &__title{
         @include titleContactMobile;
-        margin: 0;
+        padding: 0 32px;
+        line-height: calc(38/18);
+        margin: 27px 0 0 0;
     }
 
     &__wrap {
@@ -18,6 +20,7 @@ padding: 32px;
     }
 
     &__box {
+        padding: 0 32px;
         margin-bottom: 25px;
     }
 
@@ -49,13 +52,13 @@ padding: 32px;
     }
 
     &__btn{
-        margin: 20px 0 0 0;
+        margin: 40px 0 0 0;
     }
 
 }
 #map{
     width: 100%;
-    height: 400px;
+    height: 455px;
     display: block;
 }
 #mapImg{
@@ -149,17 +152,18 @@ padding: 0;
         &__map{
             order: 3;
             align-self: flex-end;
-            margin-top: 72px;
+            // margin-top: 72px;
+            margin-top: 15px;
         }
         &__btn{
             order: 2;
-            margin: 22px 0 0 5px;
+            margin: 22px 0 0 37px;
             width: 230px;
         }
         &__title{
             @include titleDesk;
             order: 1;
-            margin: 85px 80px 20px 0;
+            margin: 85px 48px 20px 0;
         }
         &__icon{
             top: -265px;
